--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -81,4 +81,5 @@
 	--bs-offcanvas-width: 300px;
 	--bs-transition: 0.25s ease-in-out;
 	--bs-navbar-height: 50px;
+	--bs-border-primary: #d4deee;
 }
