--- a/src/modules/home/components/RealEstateCard/RealEstateCard.module.scss
+++ b/src/modules/home/components/RealEstateCard/RealEstateCard.module.scss
@@ -7,7 +7,7 @@
 	height: 200px !important;
 	max-height: 200px;
 	border-radius: var(--bs-radius-medium);
-	border: 2px solid #d4deee;
+	border: 2px solid var(--bs-border-primary);
 	width: 100%;
 
 	@include mobile {
@@ -76,6 +76,42 @@
 			overflow: hidden;
 		}
 
+		.OperationWrapper {
+			display: flex;
+			justify-content: flex-start;
+			align-items: center;
+			gap: 5px;
+			width: 100%;
+			flex-wrap: wrap;
+
+			@include mobile {
+				margin-left: 0;
+				width: 100%;
+				flex-wrap: nowrap;
+			}
+
+			.Operation,
+			.Price {
+				font-size: var(--bs-font-extra-extra-large);
+				font-weight: 700;
+
+				@include devices(mobile, small-tablet) {
+					font-size: var(--bs-font-extra-large);
+				}
+			}
+
+			.Parking {
+				font-size: var(--bs-font-extra-large);
+				font-weight: 600;
+				text-overflow: ellipsis;
+				overflow: hidden;
+
+				@include mobile {
+					font-size: var(--bs-font-medium);
+				}
+			}
+		}
+
 		.Wrapper {
 			display: flex;
 			justify-content: flex-start;
@@ -94,6 +130,12 @@
 				font-size: var(--bs-font-extra-extra-large);
 				font-weight: 700;
 				white-space: initial;
+				color: var(--bs-primary);
+				cursor: pointer;
+
+				&:hover {
+					color: var(--bs-link-color);
+				}
 
 				@include mobile {
 					text-overflow: ellipsis;
@@ -120,6 +162,12 @@
 			.Size {
 				font-size: var(--bs-font-medium);
 				font-weight: 600;
+
+				.Icon {
+					width: 15px;
+					height: 15px;
+					margin-right: 5px;
+				}
 			}
 
 			.Floor {
@@ -130,19 +178,6 @@
 			.Elevator,
 			.Exterior {
 				font-size: var(--bs-font-medium);
-				font-weight: 600;
-				text-overflow: ellipsis;
-				overflow: hidden;
-			}
-
-			.Operation,
-			.Price {
-				font-size: var(--bs-font-extra-extra-large);
-				font-weight: 700;
-			}
-
-			.Parking {
-				font-size: var(--bs-font-extra-large);
 				font-weight: 600;
 				text-overflow: ellipsis;
 				overflow: hidden;
