--- a/src/modules/realEstate/pages/RealEstate/RealEstate.module.scss
+++ b/src/modules/realEstate/pages/RealEstate/RealEstate.module.scss
@@ -1,6 +1,11 @@
 @import '/src/styles/mixins.scss';
 
 .RealEstate {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
 	.NotFound {
 		margin: 100px 50px;
 		display: flex;
